# sprintfour

./: README.md  participant.md  test-doc.txt
backend/: .env.example  pyproject.toml  requirements.txt
backend/anonymization_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/schemas/: responses.py
backend/app/api/v1/routes/: detection.py  documents.py  export.py  health.py  review.py  risk.py
backend/app/core/: config.py  error_handlers.py  exceptions.py  logging.py  middlewares.py
backend/app/detectors/: __init__.py  base.py  entity_types.py  gemini_detector.py  regex_detector.py  rule_detector.py
backend/app/domain/models/: __init__.py  detection.py  document.py  export.py  review.py  risk.py
backend/app/export/: __init__.py  document_renderer.py  redaction_engine.py
backend/app/export/formatters/: __init__.py  json_formatter.py  txt_formatter.py
backend/app/extractors/: __init__.py  base_extractor.py  docx_extractor.py  pdf_extractor.py  txt_extractor.py
backend/app/normalizer/: __init__.py  normalizer.py
backend/app/pipeline/: __init__.py  confidence_engine.py  conflict_resolver.py  detection_pipeline.py  entity_merger.py
backend/app/providers/: __init__.py  base_provider.py  gemini_provider.py
backend/app/services/: __init__.py  audit_service.py  detection_service.py  detection_update_service.py  document_service.py  export_service.py  history_service.py  priority_engine.py  review_service.py  review_validator.py  risk_service.py  validation_service.py
backend/app/store/: __init__.py  document_store.py  review_store.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: audit-timeline.tsx  detection-detail-drawer.tsx  document-viewer.tsx  entity-drawer.tsx  export-validation-modal.tsx  review-queue.tsx  top-nav.tsx  (+1 more)
(+40 files in other folders)
